--- a/Changes
+++ b/Changes
@@ -2,4 +2,6 @@ Revision history for RestAPI
 
 0.01    26.09.2017
         First version
+0.08    01.10.2018
+        RestAPI::do() returns only the response data back
 
